Trabalhando com rotas no cadastro

--- a/src/app/tabela-produtos/tabela-produtos.html
+++ b/src/app/tabela-produtos/tabela-produtos.html
@@ -8,7 +8,7 @@
 
     @if((listaProdutos|filtroPesquisa:nomePesquisa).length > 0) {
         <table class="table table-striped table-hover">
-            <thead class="table-dark">
+            <thead class="table-primary">
                 <tr>
                     <th>ID</th>
                     <th>NOME</th>
