--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,21 @@
-<div class="container">
-    <h1>Cadastro de Produtos</h1>
-    <app-tabela-produtos></app-tabela-produtos>
-    <app-form-produtos></app-form-produtos>
-
-    <app-list-card-produtos></app-list-card-produtos>
-</div>
+<h1 class="text-center mt-3">Cadastro de Produtos</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/lista">
+                Lista
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/tabela">
+                Tabela
+            </a>
+        </li>           
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/novo">
+                Cadastro
+            </a>
+        </li>
+    </ul>
+</nav>
+<router-outlet />
