--- a/src/app/tabela-produtos/tabela-produtos.html
+++ b/src/app/tabela-produtos/tabela-produtos.html
@@ -15,6 +15,7 @@
                     <th>PRECO</th>
                     <th>MARCA</th>
                     <th>VALIDADE</th>
+                    <th colspan="2">AÇÃO</th>
                 </tr>
             </thead>
             <tbody>
@@ -25,6 +26,8 @@
                     <td>{{produto.preco | moeda}}</td>
                     <td>{{produto.marca | uppercase}}</td>
                     <td>{{produto.dataValidade | date: "dd/MM/yyyy"}}</td>
+                    <td><a>Editar</a></td>
+                    <td><a class="btn btn-primary" (click)="deletar(produto.id)">Deletar</a></td>
                 </tr>
                 }
             </tbody>
